2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_reports.php: Added the description
	field to the reports search in the main menu

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_maps.php: Fixed the group icon
	in the maps search view

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_users.php: Added the id_user field
	to the search in the main search

2010-08-31  Sergio Martin <sergio.martin@artica.es>

	* operation/search_agents.php
	operation/search_graphs.php
	operation/search_alerts.php
	operation/search_reports.php
	operation/search_maps.php
	operation/search_results.php
	operation/search_users.php: Restructured and fixed
	ACLs in the global search for bug 3053592

2010-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php: Fixed the 
	ACLs in the alerts view. Now only are showed the
	alerts of the visible agents for the user

2010-08-30  Sergio Martin <sergio.martin@artica.es>

	* operation/users/user.php
	operation/users/user_statistics.php
	operation/menu.php: Deleted the users view and the
	user statistics from operation menu

2010-08-29  Sancho Lerena  <slerena@artica.es>

	* include/pchart_graph.php,
	include/fgraph.php,
	include/functions_fsgraph.php: Minor (but important) changes on
	graphs: combined wired mode available on flash, improved legends
	on both types, and improved flash wired modes. 

2010-08-29  Raúl Mateos   <raulofpandora@gmail.com>

	* godmode/agentes/fields_manager.php: Added code to show text if no 
	fields defined, instead the table header.

2010-08-27  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agents/module_manager_editor.php: Changed if() statements
	order. isModuleInPolicy() is not available in open source version.

2010-08-26  Sancho Lerena  <slerena@gmail.com>

    * include/functions_custom_graphs.php: Fixed ACL problems.

    * include/functions_agents.php: Call to get_agents () with current user